bug fixes, add /users/login endpoint
